--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "devStart": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "swagger": "node ./swagger.js"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,11 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
-    "mongodb": "^4.13.0"
+    "mongodb": "^4.13.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "swagger-autogen": "^2.22.0"
   }
 }
